--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@ margin-left: 600px;
 margin-top: 200px;
 align-self: center;
 padding-top: 20px;
+border-radius: 8%; 
 
 
 }
@@ -23,4 +24,5 @@ margin-left: 45px;
 text-align: right;
 padding-right: 15px;
 border: solid black 3px;
+border-radius: 20%; 
 }
