--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,6 @@ font-size: 40px;
 margin-left: 45px;
 text-align: right;
 padding-right: 15px;
-border: solid black 3px;
-border-radius: 20%; 
+border: solid black 2px;
+border-radius: 20px; 
 }
