--- a/css/style.css
+++ b/css/style.css
@@ -3,11 +3,10 @@
 width: 500px;
 height: 500px;
 background-color: grey;
-margin-left: 600px;
+margin: 0 auto;
 margin-top: 200px;
-align-self: center;
-padding-top: 20px;
-border-radius: 8%; 
+position: relative;
+
 
 
 }
@@ -16,13 +15,40 @@ border-radius: 8%;
 
 #output{
 
+
+top: 30px;
 width: 400px;
 height: 50px;
 background-color: white;
-font-size: 40px;
 margin-left: 45px;
-text-align: right;
-padding-right: 15px;
 border: solid black 2px;
 border-radius: 20px; 
+position: relative;
+}
+
+
+
+
+#output h2{
+
+font-size: 40px;
+position: absolute;
+right: 15px;
+top: -30px;
+}
+
+#buttons{
+
+position: absolute;
+top: 200px;
+left: 100px;
+
+
+}
+
+#buttons input{
+
+width: 100px;
+height: 70px;
+
 }
