--- a/css/style.css
+++ b/css/style.css
@@ -38,17 +38,28 @@ top: -30px;
 }
 
 #buttons{
-
+width: 400px;
 position: absolute;
-top: 200px;
-left: 100px;
+top: 150px;
+left: 70px;
 
 
 }
+
+
+#plus{
+
+
+	margin-right: 50px;
+	
+}
+
+
 
 #buttons input{
 
-width: 100px;
+width: 70px;
 height: 70px;
 
 }
+
