--- a/css/style.css
+++ b/css/style.css
@@ -1,128 +1,113 @@
 @font-face {
-    font-family: Digital;
-    src: url(digital.ttf); 
+
+     font-family: Digital;
+     src: url(digital.ttf); 
     
-   }
+}
 
 
 @font-face {
-    font-family: Nums;
-    src: url(nums.otf); 
+
+     font-family: Nums;
+     src: url(nums.otf); 
     
-   }
-
-
+}
 
 
 html {
-        background: url(bg.jpg) no-repeat center center fixed;         /*ЭТО ШЕДЕЕЕЕЕЕЕЕЕЕЕЕВР*/
-        -webkit-background-size: cover;
-        -moz-background-size: cover;
-        -o-background-size: cover;
-        background-size: cover;
-}
 
-.background{
-
-width: 500px;
-height: 500px;
-background-color: grey;
-margin: 0 auto;
-margin-top: 200px;
-position: relative;
-border-radius: 35px;
-
-
-
+      background: url(bg.jpg) no-repeat center center fixed;         /*ЭТО ШЕДЕЕЕЕЕЕЕЕЕЕЕЕВР*/
+      -webkit-background-size: cover;
+      -moz-background-size: cover;
+      -o-background-size: cover;
+      background-size: cover;
 }
 
 
-.name{
+.background{          /*коробка калькулятора*/
 
-
-position: absolute;
-font-family: Digital;
-font-size: 25px;
-color: rgba(255, 255, 255, 0.5);
-bottom: 10px;
-left: 150px;
+     width: 500px;
+     height: 500px;
+     background-color: grey;
+     margin: 0 auto;
+     margin-top: 200px;
+     border-radius: 35px;
 
 }
 
 
+.name{                 
 
-#output{
+     position: absolute;
+     font-family: Digital;
+     font-size: 25px;
+     color: rgba(255, 255, 255, 0.5);
+     bottom: 10px;
+     left: 150px;
 
-
-top: 50px;
-width: 400px;
-height: 70px;
-background-color: rgba(164, 245, 177, 0.2);
-margin-left: 45px;
-border: solid #404040 2px;
-border-radius: 20px; 
-position: relative;
 }
 
 
+#output{              /*ТАБЛО калькулятора*/
+
+     top: 50px;
+     width: 400px;
+     height: 70px;
+     background-color: rgba(164, 245, 177, 0.2);
+     margin-left: 45px;
+     border: solid #404040 2px;
+     border-radius: 20px; 
+     position: relative;
+}
 
 
 #output h2{
 
-font-family: Digital;
-font-size: 50px;
-position: absolute;
-right: 15px;
-top: -28px;
-
-}
-
-#buttons{
-width: 400px;
-position: absolute;
-top: 150px;
-left: 70px;
-
-
+     font-family: Digital;
+     font-size: 50px;
+     position: absolute;
+     right: 15px;
+     top: -28px;
 
 }
 
 
+#buttons{              /*блок с кнопками*/
 
+     width: 400px;
+     position: absolute;
+     top: 150px;
+     left: 70px;
 
+}
 
 
 #buttons input{
 
-font-family: Nums;
-font-size: 30px;
-width: 70px;
-height: 70px;
-border-radius: 25%; 
+     font-family: Nums;
+     font-size: 30px;
+     width: 70px;
+     height: 70px;
+     border-radius: 25%; 
 
 }
-
 
 
 #buttons #clear{
 
+	 background-color: #eb5454;
 
-	background-color: #eb5454;
 }
-
 
 
 .podval{
 
-
-
-background-color: grey;
-position: absolute;
-bottom: 0;
-width: 100%;
-height: 15%;
-margin: -8px;
-
+     background-color: grey;
+     position: absolute;
+     bottom: 0;
+     width: 100%;
+     height: 15%;
+     margin: -8px;
 
 }
 
